hphp/hack/test/typecheck/reified_generics/deep_soft_reification.php.exp
File "deep_soft_reification.php", line 11, characters 14-20:
All type arguments must be specified because a type parameter is reified (Typing[4303])
  File "deep_soft_reification.php", line 5, characters 7-13:
  Definition is here
